2014-11-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v int] Add abstraction: env-1?

	* testing.scm (env-1?): New proc.
	<top-level>: Use ‘env-1?’ for ‘DEBUG’ and ‘VERBOSE’ handling.
	* types-table.scm (mgr, command-ok?): Use ‘env-1?’.
	<top-level>: Likewise, for ‘DEBUG’ handling.
	(mtest:select-*-error_condition): Use ‘env-1?’.

2014-10-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Move bulk of ‘pg-guile-pg-loaded’ testing to alive.scm.

	* alive.scm: Check presence and behavior of
	‘pg-guile-pg-loaded’; display features if ‘VERBOSE=1’.
	* basic.scm (test:pg-guile-pg-loaded):
	Simplify to validate ‘symbol?’ elements, only.

2014-10-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[scheme int] Use SRFI 1 instead of (ice-9 common-list).

	* types-table.scm: Don't import ‘(ice-9 common-list)’;
	instead, import ‘(srfi srfi-1)’.

2014-10-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Add "make check" option ‘VERBOSE=1’.

	* testing.scm <load-time actions>: If env var ‘VERBOSE’
	has value "1", arrange to send stdout to the null device.

2014-10-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Check well-formedness of types table cache.

	* types-table.scm (test:query-oid/type-name): ...here;
	also, ‘pg-finish’ the temporary connection when done.

2014-01-22  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Overcome PostgreSQL 9.3 "CREATE TABLE .. serial" reticence.

	* basic.scm (test:set-notice-out!-1 cmm): New proc.
	(test:set-notice-out!-1): Set ‘client_min_messages’
	to ‘basic1’ around call to ‘tmp-table’.

2014-01-22  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Handle PostgreSQL 9.3 config var ‘unix_socket_directories’.

	* fake-cluster-control (1): ...here, via regexp.

2014-01-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v int] Move "fake-cluster-control 1" invocation to runtest.

	* runtest.in: Invoke "fake-cluster-control 1" here.
	* Makefile.am (check_DATA): Remove fake-cluster/postmaster.pid.
	(fake-cluster/postmaster.pid): Delete target.
